<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group1"
        >

        <item
            android:id="@+id/aktif_siparis"
            android:title="@string/aktif_siparis" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2"
        >
        <item
            android:id="@+id/atanmamis_siparis"
            android:title="@string/atanmamis_siparis" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group3"
        >
        <item
            android:id="@+id/gecmis_siparis"
            android:title="@string/gecmis_siparis" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group4"
        >
        <item
            android:id="@+id/teslimedilmemis_siparis"
            android:title="@string/teslimedilmemis_siparis" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group5"
        >
        <item
            android:id="@+id/profilim"
            android:title="@string/profilim" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group6"
        >
        <item
            android:id="@+id/avans_talebi"
            android:title="@string/avans_talebi" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group7"
        >
        <item
            android:id="@+id/iyikotu_kuryeler"
            android:title="@string/iyikotu_kuryeler" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group8"
        >
        <item
            android:id="@+id/cikis_yap"
            android:title="@string/cikis_yap" />
    </group>

</menu>
